<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarLayout">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <RelativeLayout
                android:id="@+id/rl_setting_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="7dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingTop="7dp">


            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:text="@string/settingHeaderPlay"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="7dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingTop="7dp">

                <TextView
                    android:id="@+id/tvSettingPlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/tvSettingPlaySubject"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignRight="@+id/tvSettingPlaySubject"
                    android:gravity="start|left"
                    android:text="@string/playBackgroundTitle"
                    android:textColor="@color/black_alpha87"
                    android:textSize="16sp" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/checkboxBackgroundPlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:checked="true" />

                <TextView
                    android:id="@+id/tvSettingPlaySubject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tvSettingPlay"
                    android:layout_toLeftOf="@+id/checkboxBackgroundPlay"
                    android:layout_toStartOf="@+id/checkboxBackgroundPlay"
                    android:gravity="start|left"
                    android:paddingBottom="7dp"
                    android:text="@string/playBackgroundSubject"
                    android:textColor="@color/black_alpha54"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:layout_below="@+id/tvSettingPlaySubject"
                    android:src="@color/black_alpha54" />

            </RelativeLayout>


        </LinearLayout>
    </ScrollView>


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"></android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
</RelativeLayout>